--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-slow-down": "^2.0.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
